tests/NormalTests/paczka2/big_fuzzy/55946540.err
Error in line 6: UlG3I1GzoJ A767 5,9
Error in line 2: nK5Zq9WeEN A454 0,1
Error in line 7: UlG3I1GzoJ A454 48,1
Error in line 11: A454 A767 -1,3
Error in line 9: A454 A767 34,3
Error in line 14: UlG3I1GzoJ A767 41,8
Error in line 29: A454 A760 64,9
Error in line 26: nK5Zq9WeEN A454 64,7
Error in line 39: 4BUCYSv7U A454 87,78
Error in line 27: UlG3I1GzoJ S187 42,6
Error in line 34: 1NNwygwvc A760 235,5
Error in line 43: nK5Zq9WeEN A767 92,6
Error in line 46: nK5Zq9WeEN A760 22,9
Error in line 36: um5B A454 150,2
Error in line 44: 1NNwygwvc S187 5,4
Error in line 49: 4BUCYSv7U A760 143,2
Error in line 57: UlG3I1GzoJ A767 11,6
Error in line 64: nK5Zq9WeEN S187 6,1
Error in line 80: nK5Zq9WeEN A767 44,3
Error in line 75: UlG3I1GzoJ A767 15,1
Error in line 71: 1NNwygwvc A760 85,0
Error in line 109: um5B S187 165,60
Error in line 115: 5FhyF8SaL A454 58,5
Error in line 101: um5B S187 37,0
Error in line 130: 4BUCYSv7U A760 71,3
Error in line 146: A454 A454 81,4
Error in line 150: 5FhyF8SaL A760 24,2
Error in line 153: A454 A767 2,3
Error in line 157: A454 A760 63,2
Error in line 173: um5B S187 45,3
Error in line 198: um5B S187 35,8
Error in line 193: UlG3I1GzoJ S187 59,7
Error in line 203: UlG3I1GzoJ A760 32,2
Error in line 199: um5B A767 7,6
Error in line 212: um5B A767 23,8
Error in line 221: 1NNwygwvc A767 83,2
Error in line 223: 1NNwygwvc A454 94,5
Error in line 224: UlG3I1GzoJ A454 28,6
Error in line 226: 1NNwygwvc A767 23,9
Error in line 230: 4BUCYSv7U A767 67,3
Error in line 234: nK5Zq9WeEN A454 21,0
Error in line 237: nK5Zq9WeEN A767 17,4
Error in line 233: um5B A454 68,9
Error in line 244: 1NNwygwvc A760 10,9
